# VeOS

./: .gitignore  .vimrc  Cargo.toml  LICENSE  Makefile  README.md  config.mk  rustfmt.toml  x86_64-unknown-none-gnu.json
init/: Cargo.toml  Makefile  module.mk
init/src/: lib.rs
kernel/: Cargo.toml  Makefile  module.mk  rustfmt.toml  x86_64-unknown-none-gnu.json
kernel/src/: elf.rs  file_handle.rs  initramfs.rs  io.rs  lib.rs  macros.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: context.rs  gdt.rs  grub.cfg  mod.rs  serial.rs  sync.rs  syscalls.rs  vga_buffer.rs
kernel/src/arch/x86_64/init/: checks.asm  early_error.asm  early_init.asm  init.asm  memory.asm  multiboot_header.asm  paging.asm
kernel/src/arch/x86_64/interrupts/: .mod.rs.swp  ioapic.rs  lapic.rs  mod.rs
kernel/src/arch/x86_64/memory/: address_space_manager.rs  (+1 more)
kernel/src/boot/: freestanding.rs  mod.rs  multiboot.rs
kernel/src/boot/multiboot2/: boot_loader_name.rs  elf_symbols.rs  framebuffer_info.rs  mod.rs  module.rs  vbe_info.rs
kernel/src/elf/: mod.rs
kernel/src/initramfs/: mod.rs
kernel/src/interrupts/: mod.rs
kernel/src/memory/: address_space.rs  address_space_manager.rs  mod.rs
kernel/src/memory/allocator/: linked_list_allocator.rs  mod.rs
kernel/src/multitasking/: cpu_local.rs  mod.rs  pcb.rs  scheduler.rs  stack.rs  tcb.rs
kernel/src/multitasking/thread_management/: idle.rs  mod.rs  scheduler.rs
kernel/src/sync/: mod.rs  mutex.rs  time.rs
kernel/src/syscalls/: delta_queue.rs  mod.rs
std/: Cargo.toml  module.mk
std/src/: io.rs  lib.rs  process.rs  thread.rs
(+96 files in other folders)
